--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1>Vanshika Rajparia</h1>
     <p>Software Intern @ Oracle | AI/ML | Bioinformatics</p>
-    <img src="images/vanshika.jpg" alt="Vanshika's photo" class="profile-pic">
+    <img src="coverpic.jpg" alt="Vanshika's photo" class="profile-pic">
     <nav>
       <a href="index.html">Home</a>
       <a href="experience.html">Experience</a>
