--- a/hobbies.html
+++ b/hobbies.html
@@ -17,10 +17,9 @@
   </header>
   <main>
     <ul>
-      <li>Reading about the intersection of biology and technology</li>
-      <li>Volunteering in educational outreach & women in STEM</li>
-      <li>Participating in rocketry competitions</li>
-      <li>Designing and building payloads for micro-gravity experiments</li>
+        <li> I am a fitness enthusiast and love playing badminton. I was Vice-Captain of my University Badminton team, </li>
+      <li>I am an avid singer and pianist. I hold a diploma in music from the Bhartiya Sangeet Samiti</li>
+      <li>I love applying my academic learnigns to real=world projects, and have been a part of the SEDS club at my university. We designed and built payloads for micro-gravity experiments, and participated in rocketry competitions.</li>
     </ul>
   </main>
 </body>
