--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <p>Software Intern @ Oracle | AI/ML | Bioinformatics</p>
     <img src="coverpic.jpg" alt="Vanshika's photo" class="profile-pic">
     <nav>
-      <a href="index.html">Home</a>
-      <a href="experience.html">Experience</a>
-      <a href="timeline.html">Timeline</a>
-      <a href="hobbies.html">Hobbies</a>
-    </nav>
+        <a href="index.html">Home</a>
+        <a href="experience.html">Experience</a>
+        <a href="timeline.html">Timeline</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="resume.html">Resume</a>
+      </nav>
   </header>
   <main>
     <section>
