--- a/timeline.html
+++ b/timeline.html
@@ -9,11 +9,12 @@
   <header>
     <h1>My Timeline</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="experience.html">Experience</a>
-      <a href="timeline.html">Timeline</a>
-      <a href="hobbies.html">Hobbies</a>
-    </nav>
+        <a href="index.html">Home</a>
+        <a href="experience.html">Experience</a>
+        <a href="timeline.html">Timeline</a>
+        <a href="hobbies.html">Hobbies</a>
+        <a href="resume.html">Resume</a>
+      </nav>
   </header>
   <main>
     <ul class="timeline">
