--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,8 @@
   </header>
   <main>
     <p>You can view or download my resume below:</p>
-    <iframe src="Vanshika_Resume_H3.pdf" width="100%" height="600px" style="border: none;"></iframe>
-    <p><a href="Vanshika_Resume_H3.pdf" download>Download PDF</a></p>
+    <iframe src="Vanshika_Resume_AM4.pdf" width="100%" height="600px" style="border: none;"></iframe>
+    <p><a href="Vanshika_Resume_AM4.pdf" download>Download PDF</a></p>
   </main>
 </body>
 </html>
