--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,8 @@
     <h1>Resume</h1>
   </header>
   <main>
-    <p>You can view or download my resume below:</p>
-    <iframe src="Vanshika_Resume_AM4.pdf" width="100%" height="600px" style="border: none;"></iframe>
-    <p><a href="Vanshika_Resume_AM4.pdf" download>Download PDF</a></p>
+    <p>You can download my resume here:</p>
+    <p><a href="Vanshika_Resume_AM4.pdf" download>Download My Resume (PDF)</a></p>
   </main>
 </body>
 </html>
