--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <p>You can download my resume here:</p>
-    <p><a href="Vanshika_Resume_AM4.pdf" download>Download My Resume (PDF)</a></p>
+    <p><a href="Vanshika_Resume_HM4.pdf" download>Download My Resume (PDF)</a></p>
   </main>
 </body>
 </html>
