--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,8 @@
     <h1>Resume</h1>
   </header>
   <main>
-    <p>You can download my resume here:</p>
-    <p><a href="Vanshika_Resume_HM4.pdf" download>Download My Resume (PDF)</a></p>
+    <p>You can view my resume here:</p>
+    <p><a href="Vanshika_Resume_HM4.pdf" target="_blank">View My Resume (PDF)</a></p>
   </main>
 </body>
 </html>
