--- a/hobbies.html
+++ b/hobbies.html
@@ -18,9 +18,9 @@
   </header>
   <main>
     <ul>
-        <li> I am a fitness enthusiast and love playing badminton. I was Vice-Captain of my University Badminton team, </li>
-      <li>I am an avid singer and pianist. I hold a diploma in music from the Bhartiya Sangeet Samiti</li>
-      <li>I love applying my academic learnigns to real=world projects, and have been a part of the SEDS club at my university. We designed and built payloads for micro-gravity experiments, and participated in rocketry competitions.</li>
+        <li> I was a member of the Rocketry Club at college - SEDS BPHC, where I led the Biological Payload team. We participated in Spaceport America Cup 2022 where we studied the effect of microgravity on antimicrobial resistance, earning an Honourable Mention. I was also the Secretary of the Biology Association at BITS, where we organized workshops, held talks by prominent speakers, and promoted biology culture among students. </li>
+        <li> I am a fitness enthusiast and love playing badminton. I was Vice-Captain of my University Badminton team and represented the university at several inter-collegiate competitions. </li>
+      <li>I love playing the piano and have learnt it for 7 years.</li>
     </ul>
   </main>
 </body>
