--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
   </header>
   <main>
     <section>
-      <p>I’m a dual-major Computer Science and Biological Sciences student at BITS Pilani, currently interning at Oracle. Passionate about applying AI and tech to healthcare problems.</p>
-    </section>
+        <p>
+            I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.<br>
+            I'm graduating in June 2025 with double majors in Computer Science and Biological Sciences from BITS Pilani.<br>
+            I'm passionate about applying technology in healthcare. Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses.<br>
+            I'm especially interested in joining startups focused on AI-driven healthcare, precision oncology, and healthtech.
+          </p>
+           </section>
   </main>
 </body>
 </html>
