--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <main>
     <section>
         <p>
-            I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.<br>
-            I'm graduating in June 2025 with double majors in Computer Science and Biological Sciences from BITS Pilani.<br>
-            I'm passionate about applying technology in healthcare. Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses.<br>
+            I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.
+            I'm graduating in June 2025 with double majors in Computer Science and Biological Sciences from BITS Pilani.
+            I'm passionate about applying technology in healthcare. Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses.
             I'm especially interested in joining startups focused on AI-driven healthcare, precision oncology, and healthtech.
           </p>
            </section>
