--- a/timeline.html
+++ b/timeline.html
@@ -18,12 +18,13 @@
   </header>
   <main>
     <ul class="timeline">
-      <li><strong>2025</strong> – Graduating from BITS Pilani with dual majors in CS & Bio</li>
-      <li><strong>2024-2025</strong> – Oracle Internship, Database Security Team</li>
-      <li><strong>2023</strong> – Research Intern @ UCLA School of Dentistry</li>
-      <li><strong>2022</strong> – Intern @ Aktivolabs (health analytics)</li>
-      <li><strong>2022</strong> – Intern @ ISRO RRSC (solar panel detection)</li>
-      <li><strong>2020</strong> – SEDS Payload Team @ Spaceport America Cup</li>
+        <li><strong>Aug 2025</strong> – Member of Technical Staff @ Oracle </li>
+      <li><strong>2025</strong> – Graduating from BITS Pilani with double majors in Computer Science & Biological Sciences</li>
+      <li><strong>2024- 2025</strong> – Software Developer Intern @ Oracle - Cloud Database Security Team</li>
+      <li><strong>2023</strong> – Summer Research Intern @ UCLA - Bruin in Genomics Program </li>
+      <li><strong>2022</strong> – Intern @ Aktivolabs, Singapore </li>
+      <li><strong>2022</strong> – Summer Intern @ RRSC, Indian Space Research Organization</li>
+      <li><strong>2020</strong> – SEDS Payload Team - Spaceport America Cup</li> 
     </ul>
   </main>
 </body>
