--- a/experience.html
+++ b/experience.html
@@ -18,13 +18,12 @@
   </header>
   <main>
     <section>
-      <h2>Software Intern, Oracle (Jul 2024 – Jun 2025)</h2>
-      <p>Currently working in the <strong>Database Security</strong> team at Oracle Bangalore, where I am developing a system for generating <strong>concise summaries of Audit Insights</strong> using cutting-edge AI/ML technologies. The solution leverages <strong>Generative AI, LLMs, REST APIs, SQL</strong>, and <strong>Java</strong> to analyze and summarize audit trails within Oracle DataSafe—a component of <strong>Oracle Cloud Infrastructure</strong>.</p>
+      <h2>Software Developer Intern, Oracle (Jul 2024 – Jun 2025)</h2>
+      <p>Currently working as a part of the <strong> Cloud Database Security</strong> team at Oracle, where I used generative AI to generate  <strong>concise summaries of Audit Insights</strong>. The solution leverages <strong>Generative AI, LLMs, REST APIs, SQL</strong>, and <strong>Java</strong> to analyze and summarize insights of the asynchronously generated audit reports within Oracle DataSafe —a component of <strong>Oracle Cloud Infrastructure</strong>.</p>
       <p>Key Contributions:</p>
       <ul>
-        <li>Developed and integrated audit summarization features using LLMs into asynchronously generated reports.</li>
-        <li>Built secure REST APIs and enforced security policies.</li>
-        <li>Performed extensive unit and end-to-end testing of deployed components in production.</li>
+        <li>Developed and integrated the audit summary in the Audit Dashboard, using LLMs into asynchronously generated Audit Reports highlighting the crucial security fields that might cause potential security issues to the users data.</li>
+        <li>Developed REST APIs, implemented security features, and conducted end-to-end testing for an Audit Policy module in Oracle Data Safe - a cloud-based service for securing Oracle databases.</li>
       </ul>
 
       <h2>Summer Research Intern, University of California, Los Angeles (Jun 2023 – Aug 2023)</h2>
@@ -55,10 +54,10 @@
       </ul>
 
       <h2>Key Academic & Technical Projects</h2>
-      <h3>RNA-Seq – Next Generation Sequencing Pipeline</h3>
+      <h3>CureCraft- MERN Stack App</h3>
       <ul>
-        <li>Constructed a targeted RNA-Seq pipeline using FastQC, Trimmomatic, and STAR for alignment.</li>
-        <li>Generated custom GTF annotations and quantified gene expression from aligned reads.</li>
+        <li>Designed a <strong> medical center management web app </strong> having functionalities like online appointment booking, rescheduling, viewing past appointments, and appointment reminders 24 hours prior.</li>
+        <li> Incorporated the search functionality based on specialty of the doctor, added feature to upload prescriptions for easy future access by the patient, and prepared a dashboard to view overall statistics of themedical center by the admin.</li>
       </ul>
 
       <h3>Mutation Prediction Model for Influenza Virus</h3>
