--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <p>You can view my resume here:</p>
-    <p><a href="Vanshika_Resume_H3.pdf" target="_blank">View My Resume (PDF)</a></p>
+    <p><a href="Vanshika_Resume_AM4.pdf" target="_blank">View My Resume (PDF)</a></p>
   </main>
 </body>
 </html>
