--- a/timeline.html
+++ b/timeline.html
@@ -21,8 +21,8 @@
         <li><strong>Aug 2025</strong> – Member of Technical Staff @ Oracle </li>
       <li><strong>2025</strong> – Graduating from BITS Pilani with double majors in Computer Science & Biological Sciences</li>
       <li><strong>2024- 2025</strong> – Software Developer Intern @ Oracle - Cloud Database Security Team</li>
-      <li><strong>2023</strong> – Summer Research Intern @ UCLA - Bruin in Genomics Program </li>
-      <li><strong>2022</strong> – Intern @ Aktivolabs, Singapore </li>
+      <li><strong>2023</strong> – Summer Research Intern @ UCLA - Bruins in Genomics Program </li>
+      <li><strong>2022</strong> – Summer Intern @ Aktivolabs, Singapore </li>
       <li><strong>2022</strong> – Summer Intern @ RRSC, Indian Space Research Organization</li>
       <li><strong>2020</strong> – SEDS Payload Team - Spaceport America Cup</li> 
     </ul>
