--- a/experience.html
+++ b/experience.html
@@ -31,8 +31,7 @@
       <p>Key Contributions:</p>
       <ul>
         <li>Designed an ERD-based data model to manage dental referrals and streamline workflows.</li>
-        <li>Built user interfaces and implemented business logic to automate and monitor referral status.</li>
-        <li>Enhanced overall oral health coverage by enabling data-driven decisions.</li>
+        <li>Built user interfaces and implemented business logic to automate and monitor referral status and enhanced overall oral health coverage by enabling data-driven decisions.</li>
       </ul>
 
       <h2>Summer Intern, Aktivolabs, Singapore (Jul 2022 – Aug 2022)</h2>
@@ -40,16 +39,14 @@
       <p>Key Contributions:</p>
       <ul>
         <li>Collected and preprocessed health and demographic data for analysis.</li>
-        <li>Applied multiple ML models and performed a comparative study to identify the most effective one.</li>
-        <li>Enabled data-driven decisions by selecting optimal predictive strategies.</li>
+        <li>Applied multiple ML models and performed a comparative study to identify the most effective one. Thus, enabled data-driven decisions by selecting optimal predictive strategies.</li>
       </ul>
 
       <h2>Summer Intern, Regional Remote Sensing Centre (RRSC), ISRO (May 2022 – Jul 2022)</h2>
       <p>Worked remotely with ISRO’s Jodhpur RRSC to develop a model that detects solar panels using AI/ML techniques. This effort addressed a major gap in estimating solar power harnessed across Rajasthan.</p>
       <p>Key Contributions:</p>
       <ul>
-        <li>Built an image recognition pipeline using <strong>RCNN</strong> for solar panel detection.</li>
-        <li>Trained models on satellite imagery for accurate classification and location tagging.</li>
+        <li>Built an image recognition pipeline using <strong>RCNN</strong> for solar panel detection. Trained models on satellite imagery for accurate classification and location tagging.</li>
         <li>Completed a foundational course on image classification with TensorFlow.</li>
       </ul>
 
