--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Vanshika Rajparia</h1>
-    <p>Software Intern @ Oracle | AI/ML | Bioinformatics</p>
+    <p>Member of Technical Staff @ Oracle | AI/ML | Healthcare</p>
     <img src="coverpic.jpg" alt="Vanshika's photo" class="profile-pic">
     <nav>
         <a href="index.html">Home</a>
