--- a/experience.html
+++ b/experience.html
@@ -6,15 +6,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Fixed Navigation Bar -->
+  <div class="main-nav">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="experience.html" class="active">Experience</a>
+      <a href="timeline.html">Timeline</a>
+      <a href="hobbies.html">Hobbies</a>
+      <a href="resume.html">Resume</a>
+    </nav>
+  </div>
+
   <header>
     <h1>Experience</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="resume.html">Resume</a>
-      </nav>
   </header>
   <main>
     <section>
@@ -43,7 +47,7 @@
       </ul>
 
       <h2>Summer Intern, Regional Remote Sensing Centre (RRSC), ISRO (May 2022 – Jul 2022)</h2>
-      <p>Worked remotely with ISRO’s Jodhpur RRSC to develop a model that detects solar panels using AI/ML techniques. This effort addressed a major gap in estimating solar power harnessed across Rajasthan.</p>
+      <p>Worked remotely with ISRO's Jodhpur RRSC to develop a model that detects solar panels using AI/ML techniques. This effort addressed a major gap in estimating solar power harnessed across Rajasthan.</p>
       <p>Key Contributions:</p>
       <ul>
         <li>Built an image recognition pipeline using <strong>RCNN</strong> for solar panel detection. Trained models on satellite imagery for accurate classification and location tagging.</li>
