--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Fixed Navigation Bar -->
+  <div class="main-nav">
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="experience.html">Experience</a>
+      <a href="timeline.html">Timeline</a>
+      <a href="hobbies.html">Hobbies</a>
+      <a href="resume.html">Resume</a>
+    </nav>
+  </div>
+
   <header>
     <h1>Vanshika Rajparia</h1>
     <p>Member of Technical Staff @ Oracle | AI/ML | Healthcare</p>
     <img src="coverpic.jpg" alt="Vanshika's photo" class="profile-pic">
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="resume.html">Resume</a>
-      </nav>
   </header>
   <main>
     <section>
