--- a/hobbies.html
+++ b/hobbies.html
@@ -6,15 +6,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Fixed Navigation Bar -->
+  <div class="main-nav">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="experience.html">Experience</a>
+      <a href="timeline.html">Timeline</a>
+      <a href="hobbies.html" class="active">Hobbies</a>
+      <a href="resume.html">Resume</a>
+    </nav>
+  </div>
+
   <header>
     <h1>My Hobbies</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="resume.html">Resume</a>
-      </nav>
   </header>
   <main>
     <ul>
