--- a/resume.html
+++ b/resume.html
@@ -6,14 +6,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <!-- Fixed Navigation Bar -->
+  <div class="main-nav">
     <nav>
       <a href="index.html">Home</a>
       <a href="experience.html">Experience</a>
       <a href="timeline.html">Timeline</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="resume.html">Resume</a>
+      <a href="resume.html" class="active">Resume</a>
     </nav>
+  </div>
+
+  <header>
     <h1>Resume</h1>
   </header>
   <main>
