--- a/resume.html
+++ b/resume.html
@@ -20,9 +20,12 @@
   <header>
     <h1>Resume</h1>
   </header>
+  
   <main>
-    <p>You can view my resume here:</p>
-    <p><a href="Vanshika_Resume_AM4.pdf" target="_blank">View My Resume (PDF)</a></p>
+    <section>
+      <p>Download my complete resume to learn more about my experience, skills, and achievements in AI/ML and healthcare technology.</p>
+      <p><a href="Vanshika_Resume_AM4.pdf" target="_blank">📄 View My Resume (PDF)</a></p>
+    </section>
   </main>
 </body>
 </html>
