--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     <section>
       <p>
         I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.
-        I'm graduating in June 2025 with double majors in Computer Science and Biological Sciences from BITS Pilani.
-        I'm passionate about applying technology in healthcare. Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses.
-        I'm especially interested in joining startups focused on AI-driven healthcare, precision oncology, and healthtech.
+        I graduated with dual degree in Msc. Biological Sciences and B.E. Computer Science from BITS Pilani.
+        Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses. </p>
+        
+        <p>I am extremely passionate about applying technology to healthcare, with a particular interest in AI-driven healthcare and healthtech innovations.  I’m eager to bring my interdisciplinary background to solving meaningful problems in this space.
       </p>
     </section>
   </main>
