--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>
         I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.
         I graduated with dual degree in Msc. Biological Sciences and B.E. Computer Science from BITS Pilani.
-        Some projects I've worked on include developing a machine learning model to predict influenza virus mutation rates, and predicting the susceptibility of the UK population to diabetes and other chronic illnesses. </p>
+        Some of the projects I've worked on include developing a Machine Learning model to predict influenza virus mutation rates, creating a full stack medical centre web app using MERN, and performed comparative analysis of ML models to predict the susceptibility of the UK population to diabetes and other chronic illnesses. </p>
         
         <p>I am extremely passionate about applying technology to healthcare, with a particular interest in AI-driven healthcare and healthtech innovations.  I’m eager to bring my interdisciplinary background to solving meaningful problems in this space.
       </p>
