--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section>
       <p>
-        I'm a Member of Technical Staff at Oracle, working on Generative AI as part of the Cloud DB Security team.
+        I'm a Software Developer at Oracle, working on Generative AI within the Cloud Database Security team tp enhance the detection of security risks by generating concise, actionable audit insights.
         I graduated with dual degree in Msc. Biological Sciences and B.E. Computer Science from BITS Pilani.
         Some of the projects I've worked on include developing a Machine Learning model to predict influenza virus mutation rates, creating a full stack medical centre web app using MERN, and performed comparative analysis of ML models to predict the susceptibility of the UK population to diabetes and other chronic illnesses. </p>
         
