--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@
 
       <h2>Summer Research Intern, University of California, Los Angeles (Jun 2023 – Aug 2023)</h2>
 
-      <img src="ios vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width:100%; max-width:600px; margin:10px 0;">
+      <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width:100%; max-width:600px; margin:10px 0;">
       
       <p>Contributed to the development of an <strong>Electronic Dental Referral Management System (EDRMS)</strong> at UCLA School of Dentistry. This platform was built using <strong>Microsoft Power Platform</strong> and was intended to optimize referral workflows to maximize dental coverage across California's public schools.</p>
       
