--- a/experience.html
+++ b/experience.html
@@ -84,6 +84,13 @@
         <li>Combined daily sentiment scores with historical stock prices to train a <strong>CNN-LSTM hybrid model</strong>.</li>
         <li>Achieved reliable short-term price predictions with real-world applicability.</li>
       </ul>
+
+
+      <div style="display: flex; justify-content: center; gap: 20px; margin-top: 40px;">
+        <img src="vr_oracle.jpg" alt="Oracle Internship Project" style="width: 200px; height: auto;">
+        <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width: 200px; height: auto;">
+      </div>
+      
     </section>
   </main>
 </body>
