--- a/experience.html
+++ b/experience.html
@@ -86,11 +86,17 @@
       </ul>
 
 
-      <div style="display: flex; justify-content: center; gap: 100px; margin-top: 40px;">
-        <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width: 305px; height: auto;">
-        <img src="vr_oracle.jpg" alt="Oracle Internship Project" style="width: 350px; height: auto;">
-
+      <div style="display: flex; justify-content: center; gap: 40px; margin-top: 40px; flex-wrap: wrap;">
+        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 300px;">
+          <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px;">
+          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">UCLA EDRMS Project</figcaption>
+        </figure>
+        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 300px;">
+          <img src="vr_oracle.jpg" alt="Oracle Internship Project" style="width: 100%; height: 300px; object-fit: cover; border-radius: 8px;">
+          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">Oracle Internship Project</figcaption>
+        </figure>
       </div>
+      
 
     </section>
   </main>
