--- a/experience.html
+++ b/experience.html
@@ -87,13 +87,13 @@
 
 
       <div style="display: flex; justify-content: center; gap: 40px; margin-top: 40px; flex-wrap: wrap;">
-        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 300px;">
-          <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
-          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">UCLA EDRMS Project</figcaption>
+        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 250px;">
+          <img src="vmr_ucla.jpg" alt="UCLA EDRMS Project" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;">
+          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">UCLA</figcaption>
         </figure>
-        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 300px;">
-          <img src="vr_oracle.jpg" alt="Oracle Internship Project" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
-          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">Oracle Internship Project</figcaption>
+        <figure style="display: flex; flex-direction: column; align-items: center; max-width: 250px;">
+          <img src="vr_oracle.jpg" alt="Oracle Internship Project" style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;">
+          <figcaption style="margin-top: 8px; text-align: center; font-size: 0.95em; color: #ccc;">Oracle</figcaption>
         </figure>
       </div>
       
