--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <h1>Vanshika Rajparia</h1>
     <p>Member of Technical Staff @ Oracle | AI/ML | Healthcare</p>
-    <img src="coverpic.jpg" alt="Vanshika's photo" class="profile-pic">
+    <img src="Vanshika_oracle_pic.jpg" alt="Vanshika's photo" class="profile-pic">
   </header>
   
   <main>
