--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,10 @@
   </header>
   <main>
     <section>
-        <h2>Software Developer Intern, Oracle (Jul 2024 – Jun 2025)</h2>
+        <h2>Member of Technical Staff-1, Oracle (Aug 2025 – Present)</h2>
+        <p>I will be joining Oracle as a full-time Member of Technical Staff starting August 2025, following my internship in the Cloud Database Security team.
+
+        <h2>Software Engineering Intern, Oracle (Jul 2024 – Jun 2025)</h2>
 
         
         <p>Currently working as a part of the <strong>Cloud Database Security</strong> team at Oracle, where I used generative AI to generate <strong>concise summaries of Audit Insights</strong>. The solution leverages <strong>Generative AI, LLMs, REST APIs, SQL</strong>, and <strong>Java</strong> to analyze and summarize insights of the asynchronously generated audit reports within Oracle DataSafe —a component of <strong>Oracle Cloud Infrastructure</strong>.</p>
