--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
   <main>
     <section>
       <p>Download my complete resume to learn more about my experience, skills, and achievements in AI/ML and healthcare technology.</p>
-      <p><a href="Vanshika_Resume_upd.pdf" target="_blank">📄 View My Resume (PDF)</a></p>
+      <p><a href="Vanshika_Res_updated.pdf" target="_blank">📄 View My Resume (PDF)</a></p>
     </section>
   </main>
 </body>
