--- a/timeline.html
+++ b/timeline.html
@@ -24,7 +24,7 @@
   <main>
     <section>
       <ul class="timeline">
-        <li><strong>Aug 2025</strong> – Member of Technical Staff @ Oracle</li>
+        <li><strong>Aug 2025</strong> – Member of Technical Staff-1 @ Oracle</li>
         <li><strong>2025</strong> – Graduating from BITS Pilani with double majors in Computer Science & Biological Sciences</li>
         <li><strong>2024- 2025</strong> – Software Developer Intern @ Oracle - Cloud Database Security Team</li>
         <li><strong>2023</strong> – Summer Research Intern @ UCLA - Bruins in Genomics Program</li>
