--- a/experience.html
+++ b/experience.html
@@ -22,8 +22,8 @@
   </header>
   <main>
     <section>
-        <h2>Member of Technical Staff-1, Oracle (Aug 2025 – Present)</h2>
-        <p>I will be joining Oracle as a full-time Member of Technical Staff starting August 2025, following my internship in the Cloud Database Security team.
+        <h2>Member of Technical Staff 1, Oracle (Aug 2025 – Present)</h2>
+        <p>Joining Oracle as a full-time Member of Technical Staff starting August 2025, following my internship in the Cloud Database Security team.
 
         <h2>Software Engineering Intern, Oracle (Jul 2024 – Jun 2025)</h2>
 
